--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 
 <script>
     // === PRODUITS (TU PEUX MODIFIER ICI) ===
-    const products = JSON.parse(localStorage.getItem("products")) || [];
+    const products = 
+    JSON.parse(localStorage.getItem("produts"))
+    || [];
         {
             name: "Chaussures",
             price: 15000,
@@ -155,3 +157,4 @@
 </body>
 
 </html>
+
