--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 <script>
     // === PRODUITS (TU PEUX MODIFIER ICI) ===
     const products = 
-    JSON.parse(localStorage.getItem("produts"))
-    || [];
+    JSON.parse(localStorage.getItem("produts"))|| [];
         {
             name: "Chaussures",
             price: 15000,
@@ -157,4 +156,5 @@
 </body>
 
 </html>
+
 
